[package]
name = "server-knocker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
shell-words = "1"
nix = "0.26"
log = "0.4"
env_logger = "0.10"
parse_duration = "2"
